Refactor /velocity command to use Brigadier